--- a/project_list.html
+++ b/project_list.html
@@ -24,6 +24,9 @@
     .overlay{position:absolute;top:0;left:0;right:0;bottom:0;display:flex;flex-direction:column;justify-content:flex-end;
       background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));color:#fff;padding:18px}
     .overlay .badge{align-self:flex-start;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:700;margin-bottom:auto}
+    /* ✅ 상태별 배지 색상 */
+    .overlay .badge.completed{background:#9ca3af;color:#111} /* 회색박스 */
+    .overlay .badge.wait{background:#6b7280}
     .overlay h3{font-size:1.5rem;font-weight:800;margin:0;line-height:1.4}
     .overlay .summary{margin:6px 0 0;font-size:1.05rem;opacity:.9}
     .overlay .hover-text{display:none;text-align:center;font-size:1rem;font-weight:600}
@@ -122,6 +125,11 @@
       return hay.includes(q.toLowerCase());
     }
 
+    function badgeHtml(p){
+      if(p.status === 'completed') return '<span class="badge completed">완료</span>';
+      return p.adminApproved ? '<span class="badge">진행중</span>' : '<span class="badge wait">대기중</span>';
+    }
+
     async function render(){
       try{
         const all=await apiListProjects({status:'all'});
@@ -138,7 +146,7 @@
             <div class="thumb">
               <img src="${p._cover}" alt="cover"/>
               <div class="overlay">
-                <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
+                ${badgeHtml(p)}
                 <h3>${p.projectNumber ? `PAW #${p.projectNumber} - ` : ''}${p.name??'(이름 없음)'}</h3>
                 <p class="summary">${p.summary??''}</p>
                 <div class="hover-text">자세히 보기 →</div>
