--- a/index.html
+++ b/index.html
@@ -38,28 +38,24 @@
     }
     .highlight{color:var(--accent)}
 
-    /* Subnote */
-    .subnote {font-size: 0.75rem; color: #aaa; margin-top: 10px; font-weight: 400; line-height: 1.4; font-style: italic;}
-
     /* Projects */
     .projects h2{margin:0;font-size:2rem;font-weight:900;color:var(--ink)}
     .projects .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px}
     .cards{display:grid;grid-template-columns:repeat(auto-fill,minmax(320px,1fr));gap:40px}
-    .card{position:relative;display:flex;flex-direction:column;border-radius:20px;overflow:hidden;background:#fff;text-decoration:none;color:inherit;transition:.3s;min-height:420px}
+    .card{position:relative;display:flex;flex-direction:column;border-radius:20px;overflow:hidden;background:#fff;color:inherit;transition:.3s;min-height:420px; text-decoration:none}
     .card:hover{transform:translateY(-6px);box-shadow:0 12px 24px rgba(0,0,0,0.15)}
-    .thumb{position:relative;height:240px;overflow:hidden}
+    .thumb{position:relative;height:240px;overflow:hidden;cursor:pointer}
     .thumb img{width:100%;height:100%;object-fit:cover}
     .overlay{position:absolute;inset:0;display:flex;flex-direction:column;justify-content:flex-end;
       background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));color:#fff;padding:18px}
     .overlay .badge{align-self:flex-start;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:700;margin-bottom:auto}
-    /* 상태별 배지 색상 */
-    .overlay .badge.completed{background:#9ca3af;color:#111} /* 회색박스 */
-    .overlay .badge.wait{background:#6b7280} /* 대기중 */
+    .overlay .badge.completed{background:#9ca3af;color:#111}
+    .overlay .badge.wait{background:#6b7280}
     .overlay h3{font-size:1.4rem;font-weight:800;margin:0;line-height:1.4}
     .overlay .summary{margin:6px 0 0;font-size:1rem;opacity:.9}
     .overlay .hover-text{display:none;text-align:center;font-size:.95rem;font-weight:600}
     .card:hover .overlay .hover-text{display:block}
-    .card-body{padding:20px;background:#fff}
+    .card-body{padding:20px;background:#fff; cursor:pointer}
     .hearts{color:var(--accent);font-weight:700;margin-bottom:8px}
     .key-message{color:var(--ink);font-weight:600;margin:8px 0}
     .progress{background:#eee;border-radius:8px;overflow:hidden;height:12px;margin:10px 0}
@@ -68,21 +64,21 @@
     .stats span strong{font-weight:800;color:var(--ink);margin-left:4px}
     .muted{color:#888}
 
-    /* 🔗 오버레이 빠른 링크 */
+    /* 🔗 오버레이 빠른 링크 (button) */
     .overlay .quick-links{display:flex; gap:8px; flex-wrap:wrap; margin-top:8px;}
-    .overlay .quick-links a{
-      display:inline-block; padding:4px 8px; border-radius:8px;
-      background: rgba(255,255,255,.9); color:#111; font-weight:800; font-size:.82rem; text-decoration:none;
+    .overlay .quick-links button{
+      padding:4px 8px; border-radius:8px; border:none; cursor:pointer;
+      background: rgba(255,255,255,.9); color:#111; font-weight:800; font-size:.82rem;
     }
-    .overlay .quick-links a:hover{ background:#fff; }
+    .overlay .quick-links button:hover{ background:#fff; }
 
-    /* 📎 카드 본문 보조 버튼 */
+    /* 📎 카드 본문 보조 버튼 (button) */
     .body-links{display:flex; gap:8px; flex-wrap:wrap; margin:8px 0 6px;}
-    .body-links a{
-      display:inline-block; padding:8px 10px; border-radius:10px;
-      background:#f3f4f6; color:#111; font-weight:800; font-size:.86rem; text-decoration:none;
+    .body-links button{
+      padding:8px 10px; border-radius:10px; border:none; cursor:pointer;
+      background:#f3f4f6; color:#111; font-weight:800; font-size:.86rem;
     }
-    .body-links a.primary{ background:#E87722; color:#fff; }
+    .body-links button.primary{ background:#E87722; color:#fff; }
 
     /* CTA Dock */
     .cta-dock{position:fixed;right:20px;bottom:20px;display:flex;flex-direction:column;gap:10px;z-index:50}
@@ -95,7 +91,6 @@
 <body>
   <div data-include="header"></div>
 
-  <!-- Hero -->
   <section class="hero">
     <div class="container">
       <h1>개인과 개인을 연결하는, 직접 후원의 시작</h1>
@@ -107,7 +102,6 @@
     </div>
   </section>
 
-  <!-- Story Cards -->
   <section class="story-cards">
     <div class="container card-grid">
       <div class="story-card">
@@ -129,7 +123,6 @@
     </div>
   </section>
 
-  <!-- Projects -->
   <section class="projects">
     <div class="container">
       <div class="header">
@@ -142,7 +135,6 @@
 
   <div data-include="footer"></div>
 
-  <!-- CTA Dock -->
   <div class="cta-dock">
     <a href="https://open.kakao.com/o/go3sJ0Kh" class="btn-kakao" target="_blank" rel="noopener noreferrer">💬 단톡방</a>
     <a href="https://www.instagram.com/projectpaw.kr/" class="btn-insta" target="_blank" rel="noopener noreferrer">📷 인스타그램</a>
@@ -170,22 +162,55 @@
       if(p.status === 'completed') return '<span class="badge completed">완료</span>';
       return p.adminApproved ? '<span class="badge">진행중</span>' : '<span class="badge wait">대기중</span>';
     }
+
+    const safeUrl=(u)=>{try{const x=String(u||'').trim(); if(!x) return ''; const y=new URL(x, location.origin); return y.href;}catch{return '';}};
+
     function quickLinksHtml(p){
       if(p.status!=='completed') return '';
-      const links=[];
-      if(p.thanksCardUrl)   links.push(`<a href="${p.thanksCardUrl}" target="_blank" rel="noopener">감사카드</a>`);
-      if(p.transparencyUrl) links.push(`<a href="${p.transparencyUrl}" target="_blank" rel="noopener">투명공개</a>`);
-      if(p.reviewUrl)       links.push(`<a href="${p.reviewUrl}" target="_blank" rel="noopener">후기</a>`);
-      if(!links.length) return '';
-      return `<div class="quick-links">${links.join('')}</div>`;
+      const items=[];
+      const t=safeUrl(p.thanksCardUrl), z=safeUrl(p.transparencyUrl), r=safeUrl(p.reviewUrl);
+      if(t) items.push(`<button class="ql" data-url="${t}" type="button">감사카드</button>`);
+      if(z) items.push(`<button class="ql" data-url="${z}" type="button">투명공개</button>`);
+      if(r) items.push(`<button class="ql" data-url="${r}" type="button">후기</button>`);
+      if(!items.length) return '';
+      return `<div class="quick-links">${items.join('')}</div>`;
     }
     function bodyLinksHtml(p){
       if(p.status!=='completed') return '';
       const out=[];
-      if(p.thanksCardUrl)   out.push(`<a class="primary" href="${p.thanksCardUrl}" target="_blank" rel="noopener">감사카드</a>`);
-      if(p.transparencyUrl) out.push(`<a href="${p.transparencyUrl}" target="_blank" rel="noopener">투명공개</a>`);
-      // if(p.reviewUrl) out.push(`<a href="${p.reviewUrl}" target="_blank" rel="noopener">후기</a>`);
+      const t=safeUrl(p.thanksCardUrl), z=safeUrl(p.transparencyUrl), r=safeUrl(p.reviewUrl);
+      if(t) out.push(`<button class="primary bl" data-url="${t}" type="button">감사카드</button>`);
+      if(z) out.push(`<button class="bl" data-url="${z}" type="button">투명공개</button>`);
+      // if(r) out.push(`<button class="bl" data-url="${r}" type="button">후기</button>`);
       return out.length ? `<div class="body-links">${out.join('')}</div>` : '';
+    }
+
+    function cardHtml(p, cover){
+      const percent = p.goalAmount ? Math.min(100, Math.round((p.currentAmount||0)/p.goalAmount*100)) : 0;
+      const pid = encodeURIComponent(p.id);
+      return `
+      <div class="card" data-href="project.html?id=${pid}">
+        <div class="thumb" data-href="project.html?id=${pid}">
+          <img src="${cover}" alt="cover"/>
+          <div class="overlay">
+            ${badgeHtml(p)}
+            ${quickLinksHtml(p)}
+            <h3>PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h3>
+            <p class="summary">${p.summary??''}</p>
+            <div class="hover-text">자세히 보기 →</div>
+          </div>
+        </div>
+        <div class="card-body" data-href="project.html?id=${pid}">
+          <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
+          ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
+          ${bodyLinksHtml(p)}
+          <div class="progress"><div class="bar" style="width:${percent}%"></div></div>
+          <div class="stats">
+            <span>목표<strong>${fmt(p.goalAmount)}</strong>원</span>
+            <span>달성<strong>${fmt(p.currentAmount||0)}</strong>원</span>
+          </div>
+        </div>
+      </div>`;
     }
 
     async function render(){
@@ -193,38 +218,20 @@
         const list=await apiListProjects({status:'approved',limit:8});
         if(!list.length){$grid.innerHTML='<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';return;}
         const withCovers=await Promise.all(list.map(async p=>({...p,_cover:await coverUrlOf(p)})));
-        $grid.innerHTML=withCovers.map(p=>{
-          const percent = p.goalAmount ? Math.min(100, Math.round((p.currentAmount||0)/p.goalAmount*100)) : 0;
-          return `
-          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}">
-            <div class="thumb">
-              <img src="${p._cover}" alt="cover"/>
-              <div class="overlay">
-                ${badgeHtml(p)}
-                ${quickLinksHtml(p)}
-                <h3>PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h3>
-                <p class="summary">${p.summary??''}</p>
-                <div class="hover-text">자세히 보기 →</div>
-              </div>
-            </div>
-            <div class="card-body">
-              <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
-              ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
-              ${bodyLinksHtml(p)}
-              <div class="progress"><div class="bar" style="width:${percent}%"></div></div>
-              <div class="stats">
-                <span>목표<strong>${fmt(p.goalAmount)}</strong>원</span>
-                <span>달성<strong>${fmt(p.currentAmount||0)}</strong>원</span>
-              </div>
-            </div>
-          </a>`;
-        }).join('');
+        $grid.innerHTML=withCovers.map(p=>cardHtml(p, p._cover)).join('');
+
+        // 카드 이동(의도된 외부 링크 버튼 제외)
+        $grid.addEventListener('click',(e)=>{
+          const btn = e.target.closest('button.ql, button.bl');
+          if(btn){ e.stopPropagation(); const url=btn.dataset.url; if(url) window.open(url,'_blank','noopener'); return; }
+          const target = e.target.closest('[data-href]');
+          if(target){ location.href = target.dataset.href; }
+        });
       }catch(e){console.error(e);$grid.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';}
     }
     render();
   </script>
 
-  <!-- 링크 복사 기능 (CTA Dock) -->
   <script>
     document.querySelector(".btn-share")?.addEventListener("click", (e) => {
       e.preventDefault();
