--- a/project.html
+++ b/project.html
@@ -198,7 +198,7 @@
             <div class="done-actions">
               ${p.reviewUrl?`<a class="btn-gray" href="${p.reviewUrl}" target="_blank" rel="noopener">후기 보러가기</a>`:''}
               ${p.thanksCardUrl?`<a class="btn-primary" href="${p.thanksCardUrl}" target="_blank" rel="noopener">감사카드 보기</a>`:''}
-              ${p.transparencyUrl?`<a class="btn-gray" href="${p.transparencyUrl}" target="_blank" rel="noopener">투명 공개 보기</a>`:''}
+              ${p.transparencyUrl?`<a class="btn-gray" href="${p.transparencyUrl}" target="_blank" rel="noopener">후원내역 보러가기</a>`:''}
               <a class="btn-gray" href="#comment-list">댓글 보러가기</a>
             </div>
           </div>
