--- a/index.html
+++ b/index.html
@@ -165,12 +165,22 @@
 
     const safeUrl=(u)=>{try{const x=String(u||'').trim(); if(!x) return ''; const y=new URL(x, location.origin); return y.href;}catch{return '';}};
 
-       function bodyLinksHtml(p){
+    function quickLinksHtml(p){
+      if(p.status!=='completed') return '';
+      const items=[];
+      const t=safeUrl(p.thanksCardUrl), z=safeUrl(p.transparencyUrl), r=safeUrl(p.reviewUrl);
+      if(t) items.push(`<button class="ql" data-url="${t}" type="button">감사카드</button>`);
+      if(z) items.push(`<button class="ql" data-url="${z}" type="button">투명공개</button>`);
+      if(r) items.push(`<button class="ql" data-url="${r}" type="button">후기</button>`);
+      if(!items.length) return '';
+      return `<div class="quick-links">${items.join('')}</div>`;
+    }
+    function bodyLinksHtml(p){
       if(p.status!=='completed') return '';
       const out=[];
       const t=safeUrl(p.thanksCardUrl), z=safeUrl(p.transparencyUrl), r=safeUrl(p.reviewUrl);
       if(t) out.push(`<button class="primary bl" data-url="${t}" type="button">감사카드</button>`);
-      if(z) out.push(`<button class="bl" data-url="${z}" type="button">후원내역</button>`);
+      if(z) out.push(`<button class="bl" data-url="${z}" type="button">투명공개</button>`);
       // if(r) out.push(`<button class="bl" data-url="${r}" type="button">후기</button>`);
       return out.length ? `<div class="body-links">${out.join('')}</div>` : '';
     }
